--- a/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
@@ -24,6 +24,7 @@
         <tr>
             <th class="Rowpointer">No.</th>
             <th class="hidecolumn">ID</th>
+            <th class="Rowpointer">Group</th>
             <th class="Rowpointer">รายละเอียด</th>
             <th class="Rowpointer">ราคา</th>
             <th class="Rowpointer">ลำดับ</th>
