--- a/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
@@ -12,8 +12,8 @@
         <form>
             <ul class="form-style">
                 <li>
-                    <label>Detail<span class="required">*</span></label>
-                    <input type="text" id="txtDetail" class="field-divided" placeholder="" />
+                    <label>Expense Group<span class="required">*</span></label>&nbsp;<label>Detail<span class="required">*</span></label>
+                    <select id="cmbTypeWorking" class="field-divided text-floatleft text-size120" required></select>&nbsp;<input type="text" id="txtDetail" class="field-divided" placeholder="" />
                 </li>
                 <li>
                     <label>Price List<span class="required">*</span></label>
